--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,6 @@ python-jose==3.3.0
 python-multipart==0.0.5
 SQLAlchemy==2.0.3
 uvicorn==0.20.0
+pytest==7.2.1
+pytest-asyncio==0.20.3
+httpx==0.23.3
